# opc-dashboard

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/static/: app.css  app.js  index.html
